--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 .App {
-  text-align: center;
+ 
+  background-size: cover; /* Ensures the background image covers the entire container */
+  background-repeat: no-repeat; /* Prevents the background image from repeating */
+  background-attachment: fixed; /* Ensures the background image stays fixed as the user scrolls */
+  position: relative; /* Ensure stacking context for overlay */
+  min-height: 100vh; /* Set height to full viewport height */
+ background-color: white;
+
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +44,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
